ApexWorkbook/src/objects/Apex_Class_List__c.object
<CustomObject>
    <description>This is the listing of objects to be reviewed during a Code Review Request</description>
    <fields>
        <fullName>Object_Name__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Name of the class or object to review</inlineHelpText>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Type__c</fullName>
        <inlineHelpText>If chose &quot;Other&quot; for type of object to review, specify what type the object is</inlineHelpText>
        <label>Other Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Request__c</fullName>
        <label>Review Request</label>
        <referenceTo>Review_Request__c</referenceTo>
        <relationshipLabel>Apex Classes</relationshipLabel>
        <relationshipName>Apex_Classes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Test_Class_Name__c</fullName>
        <label>Test Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>What type of object is this?</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Apex Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Class</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Apex Class</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Apex Class List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Classes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Must_specify_object_type</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ispickval( Type__c , &apos;Other&apos;), if (isnull( Other_Type__c ), true, false), false)</errorConditionFormula>
        <errorDisplayField>Other_Type__c</errorDisplayField>
        <errorMessage>If you choose other for the object type, you must specify it in the Other Type field.</errorMessage>
    </validationRules>
</CustomObject>